--- a/styles/products.module.scss
+++ b/styles/products.module.scss
@@ -19,6 +19,10 @@
     box-shadow: 0 3px 13px rgba(23, 32, 49, 0.26);
   }
 
+  &__section {
+    margin-top: 100px;
+  }
+
   &__container {
   display: flex;
   flex-direction: column;
@@ -28,6 +32,20 @@
   width: 100%;
   padding: 30px 14px 14px;
   }
+}
+
+.title {
+  display: inline-block;
+  margin-left: 100px;
+  font-size: 1.5em;
+  font-weight: 600;
+  text-transform: capitalize;
+}
+
+.link {
+  display: inline-block;
+  margin-left: 100px;
+  font-size: 20px;
 }
 
 .image {
