--- a/styles/catalog.module.scss
+++ b/styles/catalog.module.scss
@@ -2,7 +2,7 @@
   display: flex;
   align-items: center;
   justify-content: space-around;
-  border: 1px solid gray;
+  border: 1px solid #afb9c8;
   height: 64px;
 
   &_group {
@@ -11,39 +11,32 @@
 }
 
 .selection {
-  display: inline-block;
   line-height: 64px;
-  font-size: 14px;
+  font-size: 0.8rem;
   padding: 0 32px;
-  letter-spacing: 0.04em;
+  letter-spacing: 0.04rem;
   text-transform: uppercase;
-  text-decoration: none;
   font-weight: 600;
-  color: gray;
-  transition: color 1s;
-
-  &:hover {
-    color: darkgray;
-  }
+  color: #afb9c8;
 }
 
 .options {
   width: 250px;
   margin-left: 10px;
   margin-top: 15px;
-  color: gray;
-  border: 1px solid gray;
-  box-shadow: -1px 0 0 gray;
+  color: #afb9c8;
+  border: 1px solid #afb9c8;
+  box-shadow: -1px 0 0 #afb9c8;
   height: 60px;
   padding-left: 10px;
   font-family: 'Montserrat', sans-serif;
-  font-size: 18px;
+  font-size: 1rem;
   text-transform: capitalize;
 }
 
 .search {
-  box-shadow: -1px 0 0 gray;
-  border: 1px solid gray;
+  box-shadow: -1px 0 0 #afb9c8;
+  border: 1px solid #afb9c8;
   display: flex;
   align-items: center;
 
@@ -52,15 +45,18 @@
     width: 320px;
     border: 0;
     padding-left: 24px;
+    font-size: 1rem;
 
     &::placeholder {
       font-family: 'Montserrat', sans-serif;
-      font-size: 18px;
-      color: gray;
+      font-size: 1rem;
+      color: #afb9c8;
     }
   }
 }
 
 .title {
   text-align: center;
+  font-size: 1.5rem;
+  font-weight: bold;
 }
