--- a/styles/cart.module.scss
+++ b/styles/cart.module.scss
@@ -19,8 +19,9 @@
 }
 
 .title {
-  font-size: 3rem;
   text-align: center;
+  font-size: 2rem;
+  font-weight: bold;
 }
 
 .image {
@@ -30,12 +31,13 @@
 }
 
 .details {
-  font-size: 20px;
+  font-size: 1.3rem;
 }
 
 .total {
   display: inline-block;
   margin-left: 100px;
-  font-size: 1.5em;
+  font-size: 1.5rem;
+  font-weight: bold;
   text-transform: uppercase;
 }
