--- a/styles/home.module.scss
+++ b/styles/home.module.scss
@@ -10,7 +10,7 @@
 
 .main {
   margin: 20px;
-  padding: 5rem 0;
+  padding: 3rem 0;
   flex: 1;
   display: flex;
   flex-direction: column;
@@ -18,35 +18,8 @@
   align-items: center;
 }
 
-.footer {
-  width: 100%;
-  height: 100px;
-  border-top: 1px solid #eaeaea;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.footer a {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-grow: 1;
-}
-
-.title a {
-  color: #0070f3;
-  text-decoration: none;
-}
-
-.title a:hover,
-.title a:focus,
-.title a:active {
-  text-decoration: underline;
-}
-
 .title {
-  margin: 0;
+  margin: 20px;
   line-height: 1.15;
   font-size: 4rem;
 }
@@ -81,19 +54,16 @@
 
 .link {
   display: inline-block;
-  font-size: 18px;
   line-height: 60px;
   text-transform: uppercase;
   text-decoration: none;
   color: #000;
   padding: 0 15px;
+
+  &:hover {
+    background-color: #f3dce1;
+  }
 }
-
-.link:hover {
-  background-color: #F3DCE1;
-}
-
-
 
 @media (max-width: 600px) {
   .grid {
