--- a/styles/id.module.scss
+++ b/styles/id.module.scss
@@ -1,6 +1,7 @@
 .container {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
+
   &_box {
     display: flex;
     flex-direction: column;
@@ -18,12 +19,14 @@
 
 .name {
   text-align: center;
-  font-size: 30px;
+  font-size: 2rem;
+  font-weight: bold;
 }
 
 .brand {
   text-transform: capitalize;
-  font-size: 24px;
+  font-size: 1.5rem;
+  font-weight: bold;
 }
 
 .text {
@@ -38,6 +41,7 @@
   grid-row-gap: 5px;
   justify-content: center;
   margin: 40px;
+
   &_box {
     display: flex;
     flex-direction: row;
@@ -60,21 +64,23 @@
 
   &_buy {
     height: 40px;
-    width: 176px;
+    width: 180px;
+    font-size: 1rem;
     background: #d45ba8;
     color: #fff;
     border: 1px solid #d45ba8;
     transition: all 1s;
-    font-size: 18px;
+
     &:hover {
       box-shadow: 0 3px 13px rgba(23, 32, 49, 0.26);
     }
+    
     &__active {
       border: 1px solid #e2e6e9;
-      color: gray;
+      color: #afb9c8;
       background-color: #fff;
       height: 40px;
-      width: 176px;
+      width: 180px;
       transition: all 1s;
     }
   }
