delete products from cart

--- a/styles/cart.module.scss
+++ b/styles/cart.module.scss
@@ -30,6 +30,12 @@
   object-fit: contain;
 }
 
+.delete_button {
+  background-color: #fff;
+  border: none;
+  cursor: pointer;
+}
+
 .details {
   font-size: 1.3rem;
 }
