--- a/styles/cart.module.scss
+++ b/styles/cart.module.scss
@@ -47,3 +47,43 @@
   font-weight: bold;
   text-transform: uppercase;
 }
+
+.checkout_button {
+  margin-left: 450px;
+  text-transform: uppercase;
+  height: 40px;
+  width: 180px;
+  background: #d45ba8;
+  font-size: 1rem;
+  color: #fff;
+  border: 1px solid #d45ba8;
+  cursor: pointer;
+
+  &:hover {
+    box-shadow: 0 3px 13px rgba(23, 32, 49, 0.26);
+  }
+}
+
+.popup {
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100vh;
+  width: 100vw;
+  background-color: rgba(0, 0, 0, 0.4);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  &_content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 20px;
+    background-color: #fff;
+    height: 300px;
+    width: 500px;
+    text-transform: uppercase;
+  }
+}
