--- a/styles/products.module.scss
+++ b/styles/products.module.scss
@@ -180,3 +180,22 @@
     }
   }
 }
+
+.product_result {
+  display: flex;
+  margin: 20px;
+  padding: 30px 14px 14px;
+  height: 500px;
+
+  &_left {
+    flex: 2;
+  }
+
+  &_right {
+    flex: 3;
+    font-size: 20px;
+    padding-left: 40px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
+}
