--- a/styles/products.module.scss
+++ b/styles/products.module.scss
@@ -87,13 +87,11 @@
     font-size: 1.2rem;
     font-weight: bold;
     text-transform: capitalize;
-    font-weight: bold;
   }
 
   &_title {
-    text-transform: capitalize;
+    @extend .brand_name;
     font-size: 1.5rem;
-    font-weight: bold;
   }
 }
 
